--- a/Javascript/Projects/GitHub Profile Search/index.html
+++ b/Javascript/Projects/GitHub Profile Search/index.html
@@ -1,30 +1,26 @@
-<!--index.html-->
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" 
-          content="width=device-width,
-                    initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>
-        Github Profile Search
-    </title>
-</head>
-
-<body>
-    <form class="inputForm" id="userInput">
-        <h1>
-            Github Profile Search
-        </h1>
-        <input type="text" 
-        id="inputBox" 
-        autocomplete="off" 
-        placeholder="Search a Github User" />
+    <title>Github Profile Searcher</title>
+  </head>
+  <body>
+    <form class="user-form" id="form">
+      <input
+        type="text"
+        id="search"
+        autocomplete="off"
+        placeholder="Search a Github User"
+      />
     </form>
     <main id="main"></main>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"
+      integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ=="
+      crossorigin="anonymous"
+    ></script>
     <script src="script.js"></script>
-</body>
-
+  </body>
 </html>
