--- a/Basics/d3/calculator.html
+++ b/Basics/d3/calculator.html
@@ -9,5 +9,10 @@
     <div>
         
     </div>
+    <script>
+        console.log(a);
+        let a = 10;
+        
+    </script>
 </body>
 </html>
