--- a/Basics/d3/clock.html
+++ b/Basics/d3/clock.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Digital Clock</title>
+  <title>Smart Digital Clock</title>
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&display=swap" rel="stylesheet">
 
   <style>
@@ -12,30 +12,28 @@
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      transition: all 0.4s ease;
+      transition: all 0.3s ease;
     }
 
     body {
       height: 100vh;
+      overflow: hidden;
       display: flex;
       align-items: center;
       justify-content: center;
       font-family: 'Orbitron', sans-serif;
-      overflow: hidden;
+      position: relative;
     }
 
-    /* 🌙 Night Mode */
+    /* Background gradient */
     body.night {
-      background: linear-gradient(-45deg, #0f2027, #203a43, #2c5364);
-      background-size: 400% 400%;
-      animation: gradientBG 12s ease infinite;
+      background: radial-gradient(circle at center, #0f2027, #203a43, #2c5364);
+      animation: gradientBG 20s ease infinite;
       color: #fff;
     }
 
-    /* ☀️ Day Mode */
     body.day {
-      background: linear-gradient(135deg, #fdfbfb, #ebedee);
-      background-size: 400% 400%;
+      background: linear-gradient(135deg, #fdfbfb, #ebedee, #ffe8b3);
       animation: gradientBG 20s ease infinite;
       color: #111;
     }
@@ -46,40 +44,55 @@
       100% { background-position: 0% 50%; }
     }
 
-    .box {
-      text-align: center;
-      border-radius: 20px;
-      padding: 50px 80px;
-      backdrop-filter: blur(12px);
-      width: 90%;
-      max-width: 650px;
-      animation: fadeIn 2s ease;
+    /* Canvas */
+    #particles {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 0;
     }
 
-    /* Night box */
+    /* Clock box */
+    .box {
+      position: relative;
+      z-index: 1;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      text-align: center;
+      border-radius: 20px;
+      backdrop-filter: blur(12px);
+      padding: 4vh 4vw;
+      width: 90%;
+      max-width: 550px;
+      min-height: 60vh;
+      box-sizing: border-box;
+    }
+
     body.night .box {
       border: 2px solid rgba(255, 255, 255, 0.2);
       background: rgba(0, 0, 0, 0.3);
-      box-shadow: 0 0 40px rgba(0, 255, 255, 0.5);
+      box-shadow: 0 0 40px rgba(0, 255, 255, 0.4);
     }
 
-    /* Day box */
     body.day .box {
       border: 2px solid rgba(0, 0, 0, 0.1);
-      background: rgba(255, 255, 255, 0.7);
-      box-shadow: 0 0 30px rgba(255, 204, 0, 0.4);
+      background: rgba(255, 255, 255, 0.6);
+      box-shadow: 0 0 25px rgba(255, 204, 0, 0.4);
     }
 
-    /* Heading always bigger than clock */
     h1 {
-      font-size: 6rem;
-      margin-bottom: 20px;
+      font-size: clamp(2rem, 6vw, 4rem);
+      margin-bottom: 2vh;
       letter-spacing: 2px;
     }
 
     body.night h1 {
       color: #00ffff;
-      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+      text-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff;
     }
 
     body.day h1 {
@@ -87,175 +100,237 @@
       text-shadow: 0 0 15px rgba(255, 180, 0, 0.6);
     }
 
-    /* Clock smaller than heading */
+    /* Clock time */
     #clock {
-      font-size: 4rem;
-      letter-spacing: 3px;
-      animation: pulse 1s infinite alternate;
+      display: flex;
+      align-items: flex-start;
+      justify-content: center;
+      gap: 0.3rem;
+      flex-wrap: nowrap;
+      font-size: clamp(2rem, 8vw, 4.5rem);
+      line-height: 1;
+      font-variant-numeric: tabular-nums;
+      white-space: nowrap;
+      margin-bottom: 2vh;
+    }
+
+    #clock .meridian {
+      font-size: 0.4em;
+      position: relative;
+      top: 0.4em;
     }
 
     body.night #clock {
-      color: #ffffff;
-      text-shadow: 0 0 20px #00ffff, 0 0 40px #00ffff;
+      color: #fff;
+      text-shadow: 0 0 15px #00ffff, 0 0 30px #00ffff;
     }
 
     body.day #clock {
-      color: #222;
-      text-shadow: 0 0 10px rgba(255, 204, 0, 0.5);
+      color: #111;
+      text-shadow: 0 0 10px rgba(255, 204, 0, 0.4);
     }
 
+    /* Date */
     #date {
-      margin-top: 20px;
-      font-size: 1.5rem;
-      opacity: 0;
-      animation: fadeInDate 2s ease 1s forwards;
+      font-size: clamp(1rem, 2.5vw, 1.4rem);
+      margin-bottom: 1vh;
     }
 
-    body.night #date {
+    /* Greeting */
+    #greeting {
+      font-size: clamp(1rem, 2vw, 1.3rem);
+    }
+
+    body.night #date, body.night #greeting {
       color: #aafcff;
-      text-shadow: 0 0 10px #00ffff;
+      text-shadow: 0 0 8px #00ffff;
     }
 
-    body.day #date {
-      color: #555;
+    body.day #date, body.day #greeting {
+      color: #ffb703;
+      text-shadow: 0 0 8px rgba(255, 180, 0, 0.4);
     }
 
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-30px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      100% { transform: scale(1.03); }
-    }
-
-    @keyframes fadeInDate {
-      from { opacity: 0; transform: translateY(15px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    /* 🌗 Toggle Switch */
+    /* Toggle */
     .toggle-container {
       position: absolute;
-      top: 25px;
-      right: 25px;
-      width: 80px;
-      height: 40px;
+      top: 20px;
+      right: 20px;
+      width: 70px;
+      height: 35px;
       background: rgba(255, 255, 255, 0.2);
       border-radius: 50px;
       display: flex;
       align-items: center;
-      padding: 5px;
+      padding: 4px;
       cursor: pointer;
-      box-shadow: 0 0 15px rgba(255, 255, 255, 0.3);
-      transition: all 0.4s ease;
+      box-shadow: 0 0 10px rgba(255, 255, 255, 0.3);
+      z-index: 2;
     }
 
     .toggle-btn {
-      width: 32px;
-      height: 32px;
+      width: 27px;
+      height: 27px;
       border-radius: 50%;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.2rem;
+      font-size: 1rem;
       transition: all 0.4s ease;
     }
 
     body.night .toggle-btn {
       background-color: #00ffff;
       color: #000;
-      box-shadow: 0 0 20px #00ffff;
-      transform: translateX(4px);
+      box-shadow: 0 0 15px #00ffff;
+      transform: translateX(3px);
     }
 
     body.day .toggle-btn {
       background-color: #ffb703;
       color: #fff;
-      box-shadow: 0 0 20px #ffb703;
-      transform: translateX(38px);
+      box-shadow: 0 0 15px #ffb703;
+      transform: translateX(32px);
     }
 
-    /* 📱 Responsive */
-    @media (max-width: 1024px) {
-      h1 { font-size: 5rem; }
-      #clock { font-size: 3.5rem; }
-    }
-
-    @media (max-width: 768px) {
-      .box { padding: 40px 60px; }
-      h1 { font-size: 3.5rem; }
-      #clock { font-size: 2.6rem; }
-      #date { font-size: 1.2rem; }
-      .toggle-container { width: 70px; height: 35px; }
-      .toggle-btn { width: 28px; height: 28px; }
-    }
-
+    /* Mobile adjustments */
     @media (max-width: 480px) {
-      .box { padding: 25px 35px; }
-      h1 { font-size: 2.8rem; }
-      #clock { font-size: 2rem; }
-      #date { font-size: 1rem; }
-      .toggle-container { top: 15px; right: 15px; width: 65px; height: 32px; }
-      .toggle-btn { width: 25px; height: 25px; }
+      .box {
+        width: 95%;
+        min-height: 65vh;
+        padding: 3vh 3vw;
+      }
+      #clock { font-size: 2.2rem; }
+      .toggle-container { width: 60px; height: 30px; }
+      .toggle-btn { width: 22px; height: 22px; }
     }
   </style>
 </head>
 
-<body class="night">
+<body>
+  <canvas id="particles"></canvas>
+
   <div class="toggle-container" id="themeToggle">
     <div class="toggle-btn">🌙</div>
   </div>
 
   <div class="box">
     <h1>Digital Clock</h1>
-    <div id="clock">00:00:00</div>
+    <div id="clock">
+      <span id="time">00:00:00</span>
+      <span class="meridian">AM</span>
+    </div>
     <div id="date">Loading date...</div>
+    <div id="greeting">Hello!</div>
   </div>
 
   <script>
-    const clockEl = document.getElementById('clock');
-    const dateEl = document.getElementById('date');
+    const canvas = document.getElementById('particles');
+    const ctx = canvas.getContext('2d');
+    const body = document.body;
     const toggleContainer = document.getElementById('themeToggle');
     const toggleBtn = toggleContainer.querySelector('.toggle-btn');
-    const body = document.body;
+    const timeEl = document.getElementById('time');
+    const meridianEl = document.querySelector('.meridian');
+    const dateEl = document.getElementById('date');
+    const greetingEl = document.getElementById('greeting');
+    let particles = [];
 
-    // 🕐 Update clock and date
-    const updateClock = () => {
+    function resizeCanvas() {
+      canvas.width = window.innerWidth;
+      canvas.height = window.innerHeight;
+    }
+    window.addEventListener('resize', resizeCanvas);
+    resizeCanvas();
+
+    class Particle {
+      constructor(x, y, size, speed, color) {
+        this.x = x;
+        this.y = y;
+        this.size = size;
+        this.speed = speed;
+        this.color = color;
+        this.opacity = Math.random();
+        this.fade = Math.random() * 0.02;
+      }
+      draw() {
+        ctx.beginPath();
+        ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+        ctx.fillStyle = `rgba(${this.color}, ${this.opacity})`;
+        ctx.fill();
+      }
+      update() {
+        this.y -= this.speed;
+        this.opacity += this.fade;
+        if (this.opacity <= 0 || this.opacity >= 1) this.fade = -this.fade;
+        if (this.y < 0) this.y = canvas.height;
+        this.draw();
+      }
+    }
+
+    function createParticles(rgb) {
+      particles = [];
+      for (let i = 0; i < 100; i++) {
+        const x = Math.random() * canvas.width;
+        const y = Math.random() * canvas.height;
+        const size = Math.random() * 2;
+        const speed = 0.2 + Math.random() * 0.4;
+        particles.push(new Particle(x, y, size, speed, rgb));
+      }
+    }
+
+    function animateParticles() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      particles.forEach(p => p.update());
+      requestAnimationFrame(animateParticles);
+    }
+
+    function updateClock() {
       const now = new Date();
       let hours = now.getHours();
       const meridium = hours >= 12 ? 'PM' : 'AM';
       hours = (hours % 12 || 12).toString().padStart(2, '0');
       const minutes = now.getMinutes().toString().padStart(2, '0');
       const seconds = now.getSeconds().toString().padStart(2, '0');
-      const timeString = `${hours}:${minutes}:${seconds} ${meridium}`;
-      clockEl.textContent = timeString;
+      timeEl.textContent = `${hours}:${minutes}:${seconds}`;
+      meridianEl.textContent = meridium;
 
-      const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
-      const dateString = now.toLocaleDateString('en-US', options);
-      dateEl.textContent = dateString;
-    };
+      dateEl.textContent = now.toLocaleDateString('en-US', {
+        weekday: 'long',
+        year: 'numeric',
+        month: 'long',
+        day: 'numeric'
+      });
+
+      let greeting;
+      if (hours >= 6 && hours < 12) greeting = "🌅 Good Morning";
+      else if (hours >= 12 && hours < 17) greeting = "🌤 Good Afternoon";
+      else if (hours >= 17 && hours < 20) greeting = "🌇 Good Evening";
+      else greeting = "🌙 Good Night";
+      greetingEl.textContent = greeting;
+    }
 
     setInterval(updateClock, 1000);
     updateClock();
 
-    // 🌗 Theme toggle
-    const setTheme = (theme) => {
+    function setTheme(theme) {
       body.className = theme;
       localStorage.setItem('theme', theme);
       toggleBtn.textContent = theme === 'night' ? '🌙' : '☀️';
-    };
+      createParticles(theme === 'night' ? '0,255,255' : '255,183,3');
+    }
 
     toggleContainer.addEventListener('click', () => {
       const newTheme = body.classList.contains('night') ? 'day' : 'night';
       setTheme(newTheme);
     });
 
-    // 💾 Load saved theme
-    const savedTheme = localStorage.getItem('theme') || 'night';
-    setTheme(savedTheme);
+    const hour = new Date().getHours();
+    const autoTheme = (hour >= 6 && hour < 18) ? 'day' : 'night';
+    const savedTheme = localStorage.getItem('theme');
+    setTheme(savedTheme || autoTheme);
+
+    animateParticles();
   </script>
 </body>
-
 </html>
