--- a/Javascript/Projects/Multiplication Quiz Webapp/index.html
+++ b/Javascript/Projects/Multiplication Quiz Webapp/index.html
@@ -13,8 +13,7 @@
 
 <body>
     <div class="container">
-        <h1>GeeksforGeeks</h1>
-        <h3><b> Multiplication Quiz App </b></h3>
+        <h1> Multiplication Quiz App </h1>
         <form id="form">
             <p id="score">score : 0</p>
             <h1 id="question">What is X Multiply of X?</h1>
